--- a/src/main/resources/templates/register/index.html
+++ b/src/main/resources/templates/register/index.html
@@ -8,7 +8,8 @@
     <header th:insert="~{layout/common :: common_header('ユーザー登録')}"></header>
     
     <div class="container mt-4">
-        <form id="registerForm" th:action="@{/register}" method="post" th:object="${userRegisterForm}">
+        <form id="registerForm" th:action="@{/register}" method="post" th:object="${userRegisterForm}"
+            enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="name">ユーザー名</label>
                 <input type="text" class="form-control" id="name" th:field="*{name}">
@@ -52,7 +53,7 @@
                 <div class="text-danger" th:if="${#fields.hasErrors('birthdate')}" th:errors="*{birthdate}"></div>
             </div>
             <div class="mb-3">
-                <label for="age">年齢</label>
+                <label for="age">年齢（※生年月日を入力すると自動計算されます）</label>
                 <input type="text" class="form-control" id="age" name="age" th:field="*{age}" readonly>
                 <div class="text-danger" id="ageError"></div>
                 <div class="text-danger" th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></div>
