--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -76,7 +76,7 @@
             
             <!-- 年齢 -->
             <div class="mb-3">
-                <label for="age">年齢</label>
+                <label for="age">年齢（※生年月日を入力すると自動計算されます）</label>
                 <div class="d-flex align-items-center">
                     <input type="text" class="form-control" id="age" th:field="*{age}" readonly>
                     <div class="text-danger" id="ageError"></div>
@@ -126,6 +126,7 @@
             <div class="mb-3">
                 <label for="profile_image">プロフィール画像</label>
                 <div class="d-flex align-items-center">
+					<img th:src="@{${profileImage}}" alt="プロフィール画像" style="width: 100px; height: auto;">
                     <input type="file" class="form-control" id="profile_image" th:field="*{profileImage}" disabled>
                     <button type="button" class="btn btn-primary edit-btn" onclick="enableEdit('profile_image')">編集</button>
                 </div>
@@ -185,26 +186,22 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form id="passwordForm" th:action="@{/profile/update-password/{id}(id=${profileForm.id})}" method="post" th:object="${profileForm}">
+            <form id="passwordForm" th:action="@{/profile/update-password/{id}(id=${passwordUpdateForm.id})}" method="post" th:object="${passwordUpdateForm}">
               <div class="mb-3">
                 <label for="currentPassword" class="form-label">現在のパスワード</label>
                 <input type="password" class="form-control" id="currentPassword" name="currentPassword" th:field="*{currentPassword}" required>
                 <div class="text-danger" th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}"></div>
               </div>
-              
               <div class="mb-3">
                 <label for="newPassword" class="form-label">新しいパスワード</label>
                 <input type="password" class="form-control" id="newPassword" name="newPassword" th:field="*{newPassword}" required>
                 <div class="text-danger" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></div>
               </div>
-              
               <div class="mb-3">
                 <label for="newPasswordConfirm" class="form-label">新しいパスワード（確認用）</label>
                 <input type="password" class="form-control" id="newPasswordConfirm" name="newPasswordConfirm" th:field="*{newPasswordConfirm}" required>
                 <div class="text-danger" th:if="${#fields.hasErrors('newPasswordConfirm')}" th:errors="*{newPasswordConfirm}"></div>
               </div>
-              
-              <button type="submit" class="btn btn-primary">パスワードを変更</button>
             </form>
           </div>
           <div class="modal-footer">
